# RUST-WEBGL

./: .gitignore  README.md
rust_webgl/: Cargo.toml  index.html  index.js  package-lock.json  package.json  report.20210409.140508.12920.0.001.json  rust_webgl.d.ts  rust_webgl.js  rust_webgl_bg.js  rust_webgl_bg.wasm  rust_webgl_bg.wasm.d.ts
rust_webgl/src/: lib.rs
rust_webgl/src/console_template/: draw.rs  draw_layout.rs  draw_square.rs  event.rs  init.rs  mod.rs
