[package]
name = "rust_webgl"
version = "0.1.0"
authors = ["Geoffrey <mv.geoffrey.aaron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
js-sys = "0.3.50"
cfg-if = "1.0.0"
log = "0.4.14"
console_log = { version = "0.2", optional = true }

[dependencies.web-sys]
version = "0.3.50"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]